[+][UPD][PARKEASY]diferents changes (404,500)

--- a/public/500.html
+++ b/public/500.html
@@ -4,13 +4,6 @@
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
 
   .rails-default-error-page div.dialog {
     width: 95%;
@@ -57,10 +50,7 @@
 <body class="rails-default-error-page">
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <img src="https://res.cloudinary.com/leandrobarbosalemos/image/upload/v1656571937/500_eze1br.png" alt="Error 500" width="642" height="648">
   </div>
 </body>
 </html>
