--- a/public/404.html
+++ b/public/404.html
@@ -4,13 +4,6 @@
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
 
   .rails-default-error-page div.dialog {
     width: 95%;
@@ -57,11 +50,7 @@
 <body class="rails-default-error-page">
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <img src="https://res.cloudinary.com/leandrobarbosalemos/image/upload/v1654670631/404.png" alt="Error 404" width="600" height="600">
   </div>
 </body>
 </html>
